test/error/iface/err5.rzy
component
  Err5
    input
      funcA();

    implementation elementary

  end

